<resources>
    <string name="app_name">Wahyu Tirta Aji</string>
    <string name="create_user_activity">Pendaftaran Pengguna</string>

    <string name="double_back_to_exit">Tekan Sekali lagi Untuk Keluar</string>

    <string name="tv_type">Tipe</string>
    <string name="tv_quantity">Jumlah</string>
    <string name="tv_sub_total">Sub-Total</string>
    <string name="tv_total">Total</string>
    <string name="tv_payment_ammount">Pembayaran</string>
    <string name="tv_change">Kembalian</string>
    <string name="tv_price">Harga</string>
    <string name="tv_loading">Loading...</string>

    <string name="hint_display_name">Nama Pengguna</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>

    <string name="button_delete">Hapus</string>
    <string name="button_print">Cetak</string>
    <string name="button_add">Tambah</string>

    <string name="radio_general">Umum</string>
    <string name="radio_member">Member</string>
    <string name="radio_free_pass">Free Pass</string>
    <string name="radio_administrator">Administrator</string>
    <string name="radio_cashier">Kasir</string>

    <string name="dummy_price">Rp0</string>
    <string name="dummy_type">Umum</string>
    <string name="dummy_quantity">10</string>
    <string name="dummy_display_name">User</string>

    <string name="button_login">Masuk</string>
    <string name="button_register">Daftar</string>

    <string name="button_process">PROSES</string>
    <string name="button_cancel">BATAL</string>

    <string name="login_failed_text">Gagal Masuk, Username atau Password Salah.</string>
    <string name="login_invalid">Username dan Password harus di isi.</string>

    <string name="register_success">Pendaftaran Berhasil.</string>
    <string name="register_invalid">Nama, Username dan Password harus di isi.</string>

    <string name="title_activity_admin">Pengaturan Admin</string>
    <string name="title_transaction_dialog">Proses Transaksi</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Administrator</string>
    <string name="nav_header_subtitle">admin@tw.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_statistic">Statistik</string>
    <string name="menu_price_management">Pengaturan Harga</string>
    <string name="menu_user_management">Pengaturan Pengguna</string>

    <string name="get_document_failed">Gagal mengambil data, silahkan coba lagi.</string>
    <string name="unknown_failed">Terjadi kesalahan, silahkan coba lagi.</string>

    <string name="bluetooth_connected">Terhubung ke %1$s.</string>
    <string name="bluetooth_connecting">Menyambungkan ke Bluetooth printer.</string>
    <string name="bluetooth_connection_lost">Koneksi ke Bluetooth printer terputus.</string>
    <string name="bluetooth_not_connected">Bluetooth printer tidak terhubung.</string>
    <string name="bluetooth_not_available">Perangkat tidak mendukung Bluetooth.</string>
    <string name="bluetooth_unable_connect">Tidak dapat terhubung ke Bluetooth printer.</string>
    <string name="bluetooth_writing">Mencetak Struk&#8230;</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="message_insufficient_funds">"Jumlah Pembayaran Tidak Mencukupi!"</string>

</resources>
